--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <script src="js/game.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 </html>
